--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -5,6 +5,7 @@
 }
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #000;
@@ -14,7 +15,7 @@ body {
 .container {
     position: relative;
     background-color: #fff;
-    height: 60%;
+    height: 70%;
     width: 50%;
 }
 .canvas1 {
@@ -27,4 +28,11 @@ body {
     left: 0;
     height: 100%;
     width: 100%;
+}
+
+.stopBt {
+
+}
+.startBt {
+
 }
