--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -9,13 +9,12 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #000;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
 }
 .container {
     position: relative;
     background-color: #fff;
-    height: 70%;
+    height: 70vh;
     width: 50%;
 }
 .canvas1 {
@@ -30,9 +29,47 @@ body {
     width: 100%;
 }
 
+.effects_title {
+    color: #fff;
+    font-weight: 900;
+    font-size: 1.8em;
+    text-align: center;
+    margin: .5em 0;
+}
+.effects_actions {
+    text-align: center;
+}
+.button {
+    padding: .5em;
+    font-size: 1em;
+    font-weight: 600;
+    margin: 0 0 10px 8px;
+}
+.btn {
+    padding: .6em;
+    margin: 0.7em 2em;
+    font-weight: 600;
+    font-size: 1.8em;
+}
 .stopBt {
 
 }
 .startBt {
 
 }
+
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 80%;
+    }
+}   
+@media screen and (max-width: 500px) {
+    .container {
+        width: 90%;
+        height: 85vh;
+    }
+    .btn {
+        margin: 0.7em .55em;
+    }
+}   
